--- a/app/views/accessions/edit_results.html.erb
+++ b/app/views/accessions/edit_results.html.erb
@@ -16,7 +16,7 @@
             (calc.)
           <% else %>
             <% if r.object.lab_test.lab_test_values.blank? %>
-              <%= r.text_field :value %>
+              <%= r.text_field :value, :size => 13 %>
             <% else %>
               <%= r.collection_select :value_number, LabTest.find(r.object.lab_test_id).lab_test_values, :id, :value, { :prompt => true } %>
             <% end %>
