--- a/app/views/lab_test_results/index.html.erb
+++ b/app/views/lab_test_results/index.html.erb
@@ -2,16 +2,19 @@
 
 <%= render @accession.patient %>
 
-
 <% @results.each do |department, results| %>
-  <div class="results">
-    <div class="department">
-      <%=h department %>
-    </div>
-    <table>
-      <%= render results %>
-    </table>
-  </div>
+  <table class="results">
+    <thead>
+      <tr>
+        <th class="department" colspan="4">
+          <%=h department %>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <%= render results %>          
+    </tbody>
+  </table>
 <% end %>
 
 <div class="actions">
