--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
     <ul id="menu">
       <li><%= link_to "Patients", :patients %></li>
       <li><%= link_to "Accessions", :accessions %></li>
+      <% if current_user %>
+        <li><%= link_to "Edit Profile", edit_user_path(:current) %></li>
+        <li><%= link_to "Logout", logout_path %></li>
+      <% else %>
+        <li><%= link_to "Register", new_user_path %></li>
+        <li><%= link_to "Login", login_path %></li>
+      <% end %>
     </ul>
     <div id="container">      
       <%- flash.each do |name, msg| -%>
