--- a/app/views/lab_tests/_form.html.erb
+++ b/app/views/lab_tests/_form.html.erb
@@ -1,56 +1,17 @@
-<% form_for @lab_test do |f| %>
+<% labeled_form_for @lab_test do |f| %>
   <%= f.error_messages %>
-  <p>
-    <%= f.label :lab_test_department_id %><br />
-    <%= f.collection_select :lab_test_department_id, LabTestDepartment.all, :id, :name %>
-  </p>
-  <p>
-    <%= f.label :code %><br />
-    <%= f.text_field :code %>
-  </p>
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :lab_test_unit_id %><br />
-    <%= f.collection_select :lab_test_unit_id, LabTestUnit.all, :id, :name, :prompt => "Select" %>
-  </p>
-  <p>
-    <%= f.label :procedure %><br />
-    <%= f.text_field :procedure %>
-  </p>
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.label :decimals %><br />
-    <%= f.text_field :decimals %>
-  </p>
-  <p>
-    <%= f.label :derivation %><br />
-    <%= f.check_box :derivation %>
-  </p>
-  <p>
-    <%= f.label :also_numeric %><br />
-    <%= f.check_box :also_numeric %>
-  </p>
-  <p>
-    <%= f.label :ratio %><br />
-    <%= f.check_box :ratio %>
-  </p>
-  <p>
-    <%= f.label :range %><br />
-    <%= f.check_box :range %>
-  </p>
-  <p>
-    <%= f.label :fraction %><br />
-    <%= f.check_box :fraction %>
-  </p>
-  <p>
-    <%= f.label :text_length %><br />
-    <%= f.text_field :text_length %>
-  </p>
-  <p><%= f.submit "Submit" %></p>
+  <%= f.collection_select :lab_test_department_id, LabTestDepartment.all, :id, :name %>
+  <%= f.text_field :code %>
+  <%= f.text_field :name %>
+  <%= f.collection_select :lab_test_unit_id, LabTestUnit.all, :id, :name, :prompt => "Select" %>
+  <%= f.text_field :procedure %>
+  <%= f.text_area :description %>
+  <%= f.text_field :decimals %>
+  <%= f.check_box :derivation, :label => "Derivation" %>
+  <%= f.check_box :also_numeric, :label => "Also allow numeric values?"%>
+  <%= f.check_box :ratio, :label => "N:N" %>
+  <%= f.check_box :range, :label => "N–N" %>
+  <%= f.check_box :fraction, :label => "N/N" %>
+  <%= f.text_field :text_length %>
+  <%= f.submit "Submit" %>
 <% end %>
