--- a/app/views/lab_tests/index.html.erb
+++ b/app/views/lab_tests/index.html.erb
@@ -1,28 +1,23 @@
 <% title "Lab Tests" %>
-<table>
-  <tr>
-    <th>Department</th>
-    <th>Code</th>
-    <th>Name</th>
-    <th>CPT Code</th>
-    <th>Description</th>
-    <th>Decimals</th>
-    <th>Units</th>
-  </tr>
+
+<ul id="sortable_lab_tests">
   <% for lab_test in @lab_tests %>
-    <tr>
-      <td><%=h lab_test.lab_test_department.name %></td>
-      <td><%=h lab_test.code %></td>
-      <td><%=h lab_test.name %></td>
-      <td><%=h lab_test.procedure %></td>
-      <td><%=h lab_test.description %></td>
-      <td><%=h lab_test.decimals %></td>
-      <td><%=h lab_test.lab_test_unit.name unless lab_test.lab_test_unit.nil? %></td>
-      <td><%= link_to "Show", lab_test %></td>
-      <td><%= link_to "Edit", edit_lab_test_path(lab_test) %></td>
-      <td><%= link_to "Destroy", lab_test, :confirm => 'Are you sure?', :method => :delete %></td>
-    </tr>
+    <% content_tag_for :li, lab_test do %>
+      <span class="handle">[drag]</span>
+      <%=h lab_test.lab_test_department.name %>
+      <%=h lab_test.code %>
+      <%=h lab_test.name %>
+      <%=h lab_test.procedure %>
+      <%=h lab_test.description %>
+      <%=h lab_test.decimals %>
+      <%=h lab_test.lab_test_unit.name unless lab_test.lab_test_unit.nil? %>
+      <%= link_to "Show", lab_test %>
+      <%= link_to "Edit", edit_lab_test_path(lab_test) %>
+      <%= link_to "Destroy", lab_test, :confirm => 'Are you sure?', :method => :delete %>
+    <% end %>
   <% end %>
-</table>
+</ul>
+
+<%= sortable_element("sortable_lab_tests", :url => sort_lab_tests_path, :handle => "handle") %>
 
 <p><%= link_to "New Lab Test", new_lab_test_path %></p>
