--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <title><%= h(yield(:title) || "Untitled") %></title>
     <%= stylesheet_link_tag 'application', 'jquery-ui' %>
     <%= javascript_include_tag 'jquery', 'jquery-ui', 'application' %>
+    <!--%= javascript_include_tag :defaults %-->
     <%= yield(:head) %>
   </head>
   <body>
