--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,7 @@
 <% labeled_form_for @user do |f| %>
   <%= f.error_messages %>
   <%= f.text_field :username %>
+  <%= f.text_field :initials %>
   <%= f.text_field :email %>
   <%= f.password_field :password %>
   <%= f.password_field :password_confirmation %>
