--- a/app/views/lab_tests/index.html.erb
+++ b/app/views/lab_tests/index.html.erb
@@ -1,4 +1,5 @@
 <% title "Lab Tests" %>
+<%= javascript_include_tag :defaults %>
 
 <ul id="sortable_lab_tests">
   <% for lab_test in @lab_tests %>
