--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,6 +3,7 @@
   <%= f.text_field :username %>
   <%= f.text_field :initials %>
   <%= f.text_field :email %>
+  <%= f.select :language, [['Español', 'es'], ['English','en']] %>
   <%= f.password_field :password %>
   <%= f.password_field :password_confirmation %>
 
