--- a/app/views/accessions/index.html.erb
+++ b/app/views/accessions/index.html.erb
@@ -2,7 +2,8 @@
 
 <%= render @patient if @patient %>
 
-<div class="accessions">
+<h3>Pending List</h3>
+<div class="pending_accessions">
   <table>
     <tr>
       <th>Accession #</th>
@@ -10,7 +11,20 @@
       <th>Reported Date</th>
       <th>Note</th>
     </tr>
-    <%= render @accessions %>
+    <%= render @pending_accessions %>
+  </table>
+</div>
+
+<h3>Recently Reported</h3>
+<div class="reported_accessions">
+  <table>
+    <tr>
+      <th>Accession #</th>
+      <th>Date of Extraction</th>
+      <th>Reported Date</th>
+      <th>Note</th>
+    </tr>
+    <%= render @reported_accessions %>
   </table>
 </div>
 
