--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,9 +16,13 @@ h2 {
 
 body,
 #ui-datepicker-div,
-#lab_tests {
+#order_tests {
   font-family: "Lucida Grande", Verdana, Arial, "Bitstream Vera Sans", sans-serif;
 	font-size: 13px;
+}
+
+#order_tests {
+  height: 32em;
 }
 
 body {
@@ -40,7 +44,7 @@ textarea, input, select {
 }
 
 table {
-  table-layout:fixed;
+  /*table-layout: fixed;*/
 	margin: 2.5em 0;
 	width: 550px;
 	border-collapse: collapse;
@@ -61,18 +65,40 @@ td {
   border: none;
 }
 
-td.high_value, td.low_value, td.normal_value {
+td.high_value, td.low_value, td.abnormal_value, td.normal_value {
 	text-align: right;
+  padding-right: 15px;
 }
 
 td.low_value {
+	background: url(/images/low_flag.png) no-repeat center right;
 	color: #6678b1;
 }
 
 td.high_value {
+	background: url(/images/high_flag.png) no-repeat center right;
 	color: #a66662;
 }
 
+td.abnormal_value {
+	background: url(/images/abnormal_flag.png) no-repeat center right;
+	color: #800080;
+}
+
+td.range_min {
+  text-align: right;
+	padding-right: 0;
+}
+
+td.range_interval_symbol {
+  text-align: center;
+	padding: 0;
+}
+
+td.range_max {
+  text-align: left;
+	padding-left: 0;
+}
 
 tr.even td {
   /*margin: none;*/
@@ -269,4 +295,19 @@ legend {
 
 li .handle {
   cursor: move;
+}
+
+#login h1 a {
+	background: url(/images/logo.png) no-repeat top center;
+}
+
+#user_session_username, #user_session_password {
+	font-size: 24px;
+	width: 97%;
+	padding: 3px;
+	margin-top: 2px;
+	margin-right: 6px;
+	margin-bottom: 16px;
+	border: 1px solid #e5e5e5;
+	background: #fbfbfb;
 }
