--- a/app/views/accessions/edit_results.html.erb
+++ b/app/views/accessions/edit_results.html.erb
@@ -18,7 +18,7 @@
             <% if r.object.lab_test.lab_test_values.blank? %>
               <%= r.text_field :value, :size => 13 %>
             <% else %>
-              <%= r.collection_select :value_number, LabTest.find(r.object.lab_test_id).lab_test_values, :id, :value, { :include_blank => true } %>
+              <%= r.collection_select :lab_test_value_id, LabTest.find(r.object.lab_test_id).lab_test_values, :id, :value, { :include_blank => true } %>
               <%= r.text_field :value, :size => 13 if r.object.lab_test.also_numeric %>
             <% end %>
           <% end %>
