--- a/app/views/lab_test_results/index.html.erb
+++ b/app/views/lab_test_results/index.html.erb
@@ -23,5 +23,5 @@
 <div class="actions">
   <%= link_to "Change Accession", edit_accession_path(@accession) %> |
   <%= link_to "Enter Results", edit_results_accession_url(@accession) %> |
-  <%= link_to "Patient Report (PDF)", accession_lab_test_results_path(@accession, :format => 'pdf') if @accession.reported_at %>
+  <%= link_to "Patient Report (PDF)", accession_lab_test_results_path(@accession, :format => 'pdf') %>
 </div>
