--- a/app/views/reference_ranges/index.html.erb
+++ b/app/views/reference_ranges/index.html.erb
@@ -26,4 +26,4 @@
   <% end %>
 </table>
 
-<p><%= link_to "New Lab Test Normal Range", new_reference_range_path %></p>
+<p><%= link_to "New Reference Range", new_reference_range_path %></p>
