--- a/app/views/accessions/edit.js.erb
+++ b/app/views/accessions/edit.js.erb
@@ -1,1 +1,1 @@
-$("#<%= excape_javascript('#lab_test_1') %>").attr('disabled', true);
+$("#<%= escape_javascript('#lab_test_1') %>").attr('disabled', true);
