--- a/app/views/lab_tests/index.html.erb
+++ b/app/views/lab_tests/index.html.erb
@@ -1,24 +1,26 @@
 <% title "Lab Tests" %>
-<% javascript "defaults" %>
+<% javascript :defaults %>
 
-<ul id="sortable_lab_tests">
-  <% for lab_test in @lab_tests %>
-    <% content_tag_for :li, lab_test do %>
-      <span class="handle">[drag]</span>
-      <%=h lab_test.department.name %>
-      <%=h lab_test.code %>
-      <%=h lab_test.name %>
-      <%=h lab_test.procedure %>
-      <%=h lab_test.description %>
-      <%=h lab_test.decimals %>
-      <%=h lab_test.unit.name unless lab_test.unit.nil? %>
-      <%= link_to "Show", lab_test %>
-      <%= link_to "Edit", edit_lab_test_path(lab_test) %>
-      <%= link_to "Destroy", lab_test, :confirm => 'Are you sure?', :method => :delete %>
+<ul id="lab_tests">
+  <% @lab_tests.each do |department, lab_tests| %>
+    <h3><%=h department %></h3>
+    <% for lab_test in lab_tests %>
+      <% content_tag_for :li, lab_test do %>
+        <span class="handle">[drag]</span>
+        <%=h lab_test.code %>
+        <%=h lab_test.name %>
+        <%=h lab_test.procedure %>
+        <%=h lab_test.description %>
+        <%=h lab_test.decimals %>
+        <%=h lab_test.unit.name unless lab_test.unit.nil? %>
+        <%= link_to "Show", lab_test %>
+        <%= link_to "Edit", edit_lab_test_path(lab_test) %>
+        <%= link_to "Destroy", lab_test, :confirm => 'Are you sure?', :method => :delete %>
+      <% end %>
     <% end %>
   <% end %>
 </ul>
 
-<%= sortable_element("sortable_lab_tests", :url => sort_lab_tests_path, :handle => "handle") %>
+<%= sortable_element("lab_tests", :url => sort_lab_tests_path, :handle => "handle") %>
 
 <p><%= link_to "New Lab Test", new_lab_test_path %></p>
