--- a/app/views/layouts/accessions.html.erb
+++ b/app/views/layouts/accessions.html.erb
@@ -4,11 +4,12 @@
   <head>
     <title><%= h(yield(:title) || "Untitled") %></title>
     <%= stylesheet_link_tag 'screen' %>
+    <%= stylesheet_link_tag 'jquery-ui' %>
     <%= yield(:head) %>
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <%= render 'layouts/tabs' %>
+    <%= render 'tabs' %>
     <%= render 'sidebar' %>
     
     <div class='main'>
