--- a/app/views/layouts/patients.html.erb
+++ b/app/views/layouts/patients.html.erb
@@ -8,7 +8,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-    <%= render 'layouts/tabs' %>
+    <%= render 'tabs' %>
     <%= render "sidebar" %>
     
     <div class='main'>
