--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -7,7 +7,7 @@
       <%= f.text_field :family_name, :required => true, :label => t('.family_name') %>
       <%= f.text_field :family_name2, :label => t('.family_name2') %>
       <%= f.select :gender, Patient::GENDERS, :prompt => t('.prompt_gender'), :required => true, :label => t('.gender') %>
-      <%= f.date_select :birthdate, :label => t('.birthdate'), :required => true, :start_year => Time.now.year, :end_year => 1900 %>
+      <%= f.date_select :birthdate, :label => t('.birthdate'), :required => true, :start_year => Time.now.year, :end_year => 1900, :prompt => {:day => t('.day'), :month => t('.month'), :year => t('.year')} %>
       <%= f.text_field :identifier, :label => t('.identifier') %>
       <%= f.text_field :email, :label => t('.email') %>
       <%= f.text_field :phone, :label => t('.phone') %>
