Improved age range named_scope

--- a/app/views/admin/reference_ranges/index.html.erb
+++ b/app/views/admin/reference_ranges/index.html.erb
@@ -1,5 +1,7 @@
 <% title "Reference Ranges" %>
 
+<b>If there is a max age value, there must be a min age value. In the future, the program will validate this.</b><br /><br />
+
 <table>
   <tr>
     <th>Test</th>
